[package]
name = "arb-sys"
version = "0.2.6"
authors = ["William Youmans <wyoumans@usf.edu>"]
edition = "2018"
description = "Bindings to the Arb library"
homepage = "https://github.com/wjyoumans/arb-sys"
repository = "https://github.com/wjyoumans/arb-sys"
license = "MIT OR Apache-2.0" 
keywords = ["flint", "real", "complex", "number-theory", "math"]
categories = ["algorithms", "external-ffi-bindings", "mathematics"]
readme = "README.md"

[dependencies]
libc = "0.2"
flint-sys = "0.5"
#flint-sys = { path = "../flint-rs/flint-sys" }

