[package]
name = "arb-sys"
version = "0.3.2"
authors = ["William Youmans <wyoumans@usf.edu>"]
edition = "2018"
description = "Bindings to the Arb library"
homepage = "https://github.com/wjyoumans/arb-sys"
repository = "https://github.com/wjyoumans/arb-sys"
license = "MIT OR Apache-2.0" 
keywords = ["flint", "real", "complex", "number-theory", "math"]
categories = ["algorithms", "external-ffi-bindings", "mathematics"]
readme = "README.md"

[dependencies]
libc = "0.2"
gmp-mpfr-sys = "1.4"
flint-sys = { version = "0.7", features = ["disable-make-check"] }

[features]
disable-make-check = []

[target.'cfg(target_os = "windows")'.build-dependencies.winapi]
version = "0.3"
features = ["combaseapi", "knownfolders", "shlobj", "winbase", "winerror"]
